frontend working with api, most tables have view, delete and create functions

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,4 @@
 <h1>Welcome to Mallet Manager!</h1>
 
 <p>This will be filled with information about the software</p>
+<img src="logo.png" alt="Mallet Manager" width="200" length="250" style="align-content:center"/>
