--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,15 +8,21 @@
             <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="#/home">Mallet Manager</a>
+        <img src="logo.png" alt="Mallet Manager" width="45" length="55"/>
     </div>
 
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
             <li><a href="#/messages">Messages</a></li>
+            <li><a href="#/sendMessage">Send Message</a></li>
             <li><a href="#/users">Users</a></li>
+            <li><a href="#/createUser">Create User</a></li>
             <li><a href="#/tournaments">Tournaments</a></li>
+            <li><a href="#/teams">Teams</a></li>
+            <li><a href="#/createTeam">Create Team</a></li>
             <li><a href="#/matches">Matches</a></li>
-
+            <li><a href="#/results">Results</a></li>
+            <li><a href="#/createResult">Create Result</a></li>
         </ul>
     </div>
 </nav>
