all tables have at least view functions

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -21,8 +21,9 @@
             <li><a href="#/teams">Teams</a></li>
             <li><a href="#/createTeam">Create Team</a></li>
             <li><a href="#/matches">Matches</a></li>
-            <li><a href="#/results">Results</a></li>
-            <li><a href="#/createResult">Create Result</a></li>
+            <li><a href="#/createMatch">Create Match</a></li>
+            <li><a href="#/leagues">View Leagues</a></li>
+
         </ul>
     </div>
 </nav>
