--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,20 @@
-<h1>Welcome to Mallet Manager!</h1>
+<style>     .footer {display: none;}      </style>
 
-<p>This will be filled with information about the software</p>
-<img src="logo.png" alt="Mallet Manager" width="200" length="250" style="align-content:center"/>
+<div>
+    <img src="action-shot.jpeg" class="bg" alt="polo picture" width="120%"/>
+        <div style="position: absolute;top:40%;left: 42%;margin: -100px 0 0 -150px;">
+            <h1 style="color:white; font-weight: 900; font-size: 50px; ">Welcome to Mallet Manager</h1>
+        </div>
+    <div style="position: absolute;top:48%;left:60%;margin: -100px 0 0 -150px; font-size: 30px; font-weight: 500">
+        <p style="color:#4DA9BB"> The no.1 Polo Club Organiser.</p>
+        <p class="text-faded mb-5">Mallet Manager is a centralised system that organises</p>
+        <p  class="text-faded mb-5"> polo teams and tournaments by interconnecting spectators,</p>
+        <p  class="text-faded mb-5">players and managers.</p>
+
+
+        <!--<a href="#/createUser" class="btn btn-primary" style="float:right; margin: 10px; font-size: 26px;">Register</a>-->
+        <!--<a href="#/createUser" class="btn btn-primary" style="float:right; margin: 10px; font-size: 26px;">Sign In</a>-->
+    </div>
+
+
+</div>
