--- a/templates/viewMessages.html
+++ b/templates/viewMessages.html
@@ -1,4 +1,5 @@
-<h1>Messages</h1>
+<a href="#/sendMessage" class="btn btn-primary" style="float:right; margin: 10px">Send Message</a>
+<h1>My Messages</h1>
 
 <div class="alert alert-warning" ng-hide="messages">
     <p>There aren't any messages!</p>
@@ -19,3 +20,4 @@
         <td><a ng-click="remove(message.id)" class="trash"/><span class="glyphicon glyphicon-trash"/></td>
     </tr>
 </table>
+
