--- a/templates/viewTeams.html
+++ b/templates/viewTeams.html
@@ -1,5 +1,5 @@
+<a href="#/createTeam" class="btn btn-primary" style="float:right; margin: 10px">Create Team</a>
 <h1>Teams</h1>
-
 <div class="alert alert-warning" ng-hide="teams">
     <p>There aren't any teams!</p>
 </div>
@@ -19,3 +19,4 @@
         <td><a ng-click="remove(team.id)" class="trash"/><span class="glyphicon glyphicon-trash"/></td>
     </tr>
 </table>
+
